# Otto

./: Boris.xlsx  Deutsch.xlsx  README.md  setup.cfg
src/: Otto.py  Otto_gui.ipynb
src/Otto.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
