[metadata]
name = Otto
version = 1.0.0
author = Boris Terzic
description = Optimal Translation Trainer Operative
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BTerzic22/Otto
#license = file:LICENSE
classifiers =
    License :: Free for non-commercial use
    Natural Language :: English
    Natural Language :: French
    Natural Language :: German
    Programming Language :: Python :: 3.9
    Topic :: Education :: Testing

[options]
package_dir = 
    = src
python_requires = >=3.9
